@@ -8,6 +8,7 @@ InputQuantity=8
 OutputQuantity=8
 RmlPort=5859
 CunctatorPort=3749
+SoftwareAuthorityPort=9500
 CicIpAddress1=1.2.3.4
 CicPort=5001
 NetcuePort=/dev/ttyS0
